[B]2.3.1[/B]
• Add Next Up popup for Live TV
• Add albums count on artists dialog info
• Add possibility to disable 'Settings' shortcut widget
• Add PVR overlay when switching channels
• Fix artists/albums plots on music dialog info
• Fix on PVR
• Fix caterories labels for personalized widgets

[B]2.3.0[/B]
• Add parental control to protect home menu items and widgets with password
• Add support for German language (Thanks to rainman74)
• Fix CDArts position on Global Search screen
• Fix esthetic appearance
• Minor fixes
• Minor changes

[B]2.2.9[/B]
• Add support for extendedinfo youtube list
• Add shortcut for movies set info to context menu
• Add shortcut for extended info to context menu
• Fix lyrics on music visualisation
• Fix aspect ratio on tv shows widgets
• Fix channel osd recording indicator visibility
• Fix esthetic appearance
• Minor fixes
• Minor changes

[B]2.2.8[/B]
• Add info dialog for movies sets
• Fix playlists editor
• Minor fixes

[B]2.2.7[/B]
• Changes for Kodi 18
• Add possibility to disable colored outline for CDArts
• Add possibility to disable animated lyrics for classic lyrics
• Fix disc overlay for some CDArts
• Fix extended info window for some resolutions
• Fix playlists editor
• Minor fixes

[B]2.2.6[/B]
• Change extension file '.png' to '.jpg' for games artworks
• Minor fixes

[B]2.2.5[/B]
• Add games sources widget
• Add support for games artworks (artworks must be named identical to the file name of the game with the extension '.png' and must be in the same folder as games)
• Fix personalized widget 5
• Fix plots and thumbs on info dialog to avoid spoilers
• Fix widgets property
• Changes on widgets when libraries are not populated

[B]2.2.4[/B]
• Add possibility to show CDArt on widgets and on library
• Add possibility to install addons zip files directly from home submenu
• Minor fixes

[B]2.2.3[/B]
• Add possibility to use alphabet for scrolling on library (experimental)