@@ -168,7 +168,6 @@
 		</include>
 		<control type="label">
 			<right>20</right>
-			<description>Disk usage text</description>
 			<include>OpenClose_Right</include>
 			<bottom>10</bottom>
 			<width>800</width>
